added modified Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,13 +12,17 @@ PROGRAM = sci
 
 all = $(PROGRAM)
 
-all: param.o read.o sci.o
-	$(FC) $(FCFLAGS) -o sci param.o read.o sci.o ${LIB}
+all: param.o read.o make_huckel.o hartree.o sci.o
+	$(FC) $(FCFLAGS) -o sci param.o read.o make_huckel.o hartree.o sci.o ${LIB}
 
 param.o: param.f90
 	$(FC) $(FCFLAGS) -c param.f90 $(LIB)
 read.o: read.f90
 	$(FC) $(FCFLAGS) -c read.f90 $(LIB)
+make_huckel.o: make_huckel.f90
+	$(FC) $(FCFLAGS) -c make_huckel.f90 $(LIB)
+hartree.o: hartree.f90
+	$(FC) $(FCFLAGS) -c hartree.f90 $(LIB)
 sci.o: sci.f90
 	 $(FC) $(FCFLAGS) -c sci.f90  $(LIB)
 #pirg-rtc.o: pirg-rtc.f90
